fix:新增ehcache进行存储数据,以及解析每行数据中的格式

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 log:
-  log-path: /Volumes/工作/工作/项目/Huasun_DaLi/Huasun_DaLiUnit_mes_backend/log
+  log-path: C:\project\hs_mes\log
 
 spring:
   cache:
